--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-.weatherBox {
-    width: 350px;
-    height: 150px;
-    margin: 10px;
-    padding: 25px;
-    border: 5px solid black;
-  }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
